carols website updated

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -402,8 +402,8 @@ p {
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: 80vh;
-  background-color: rgba(22, 30, 56, 0.8);
+  height: 90vh;
+  background-color: #b8a07e;
   overflow: hidden;
   position: relative;
 }
@@ -419,6 +419,13 @@ p {
   background-position: center;
   background-repeat: no-repeat;
 }
+
+/* #hero .carousel-quote {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+} */
+
 #hero .carousel-container {
   display: flex;
   justify-content: center;
@@ -432,22 +439,28 @@ p {
 #hero .container {
   text-align: center;
 }
-#hero h2 {
+/* #hero h2 {
   color: #fff;
   margin-bottom: 20px;
   font-size: 48px;
   font-weight: 700;
-}
+} */
 #hero p {
   -webkit-animation-delay: 0.4s;
   animation-delay: 0.4s;
   margin: 0 auto 30px auto;
-  color: #fff;
+  color: #5a656ebb;
 }
-#hero .carousel-inner .carousel-item {
+#hero .carousel-inner .carousel-img {
   transition-property: opacity;
   background-position: center top;
 }
+
+#hero .carousel-inner a:hover {
+  color: #b8a07e;
+}
+
+
 #hero .carousel-inner .carousel-item,
 #hero .carousel-inner .active.carousel-item-start,
 #hero .carousel-inner .active.carousel-item-end {
@@ -477,11 +490,11 @@ p {
 }
 #hero .carousel-control-next-icon:hover, #hero .carousel-control-prev-icon:hover {
   background: rgba(255, 255, 255, 0.3);
-  color: rgba(255, 255, 255, 0.8);
+  color: #b8a07e
 }
 #hero .carousel-indicators li {
   cursor: pointer;
-  background: #fff;
+  background: #5a656ebb;
   overflow: hidden;
   border: 0;
   width: 12px;
@@ -492,7 +505,7 @@ p {
 }
 #hero .carousel-indicators li.active {
   opacity: 1;
-  background: #006fbe;
+  background: #b8a07e;
 }
 #hero .btn-get-started {
   font-family: "Raleway", sans-serif;
@@ -507,11 +520,24 @@ p {
   color: #fff;
   -webkit-animation-delay: 0.8s;
   animation-delay: 0.8s;
-  background: #006fbe;
+  background: #fff;
 }
 #hero .btn-get-started:hover {
-  background: #007ed8;
+  background: #fff;
 }
+
+#hero #quote-1 {
+  background-image: url("/assets/img/resources/Quote1.png");
+}
+
+#hero #quote-2 {
+  background-image: url("/assets/img/resources/Quote2.png");
+}
+
+#hero #quote-3 {
+  background-image: url("/assets/img/resources/Quote3.png");
+}
+
 @media (max-width: 992px) {
   #hero {
     height: 100vh;
@@ -536,6 +562,25 @@ p {
   }
 }
 
+/* Media Queries for the background image quotes
+Change image based on aspect ratios for landscape vs portrait */
+@media (orientation: portrait) {
+  #hero #quote-1 {
+    background-image: url("/assets/img/resources/Quote1-portrait.png");
+  }
+  #hero #quote-2 {
+    background-image: url("/assets/img/resources/Quote2-portrait.png");
+  }
+  #hero #quote-3 {
+    background-image: url("/assets/img/resources/Quote3-portrait.png");
+  }
+
+  /* #hero .carousel-quote {
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  } */
+}
 
 /*--------------------------------------------------------------
 # Breadcrumbs
@@ -641,58 +686,45 @@ p {
 /*--------------------------------------------------------------
 # About Page
 --------------------------------------------------------------*/
-.about-page h3 {
-  font-weight: 700;
-  font-size: 20px;
-  color: #5a656ebb;
+#about-page {
+  padding-top: 140px;
 }
 
-.about-page .start-paragraph {
-  margin-top: 15px;
-}
-
-.about-page  ul {
+#about-page  ul {
   list-style: none;
   padding: 0;
+  margin: 25px 0;
 }
 
-.about-page  a {
-  text-decoration:underline;
-  color: #5a656ebb;
-  /* padding: 0; */
-}
-
-.about-page  a:hover {
+#about-page  a {
   text-decoration:underline;
   color: #b8a07e;
   /* padding: 0; */
 }
 
-.about-page  ul li {
+#about-page  a:hover {
+  text-decoration:underline;
+  color: #b8a07e;
+  /* padding: 0; */
+}
+
+#about-page  ul li {
   margin-bottom: 20px;
   display: flex;
   align-items: center;
 }
-.about-page ul strong {
-  margin-right: 10px;
+
+#about-page ul strong {
+  margin-right: 5px;
 }
-.about-page  ul i {
+
+#about-page  ul i {
   font-size: 16px;
   margin-right: 5px;
   color: #b8a07e;
   line-height: 0;
 }
 
-.about-page .last-row{
-  margin-top: 15px;
-}
-.about-page .content p:last-child {
-  margin-bottom: 0;
-}
-
-.about-page .section-title {
-  margin-bottom: 10px;
-}
 
 /*--------------------------------------------------------------
 # Services
@@ -789,6 +821,7 @@ p {
   height: 50rem !important;
   overflow-y: scroll;
 } */
+
 #portfolio .portfolio-item {
   margin-bottom: 30px;
 }
@@ -928,7 +961,7 @@ p {
   transition: all 0.3s;
 }
 
-.journal-block .journal-info:hover img {
+.journal-block .journal-info:hover .img-border {
   transform: scale(1.05);
   -moz-transform: scale(1.05);
   -webkit-transform: scale(1.05);
@@ -971,6 +1004,25 @@ p {
 .story-intro {
   padding-top: 100px;
 }
+
+.inline-img-border-right{
+  /* padding-bottom: 30px; */
+  /* border-bottom: 10px solid #b8a07e; */
+  border-right: 20px solid #b8a07e;
+  padding-right: 15px;
+}
+
+.story-intro .start-paragraph{
+  margin-top: 0px;
+}
+
+.inline-img-border-left{
+  /* padding-bottom: 30px; */
+  /* border-bottom: 10px solid #b8a07e; */
+  border-left: 20px solid #b8a07e;
+  padding-left: 15px;
+}
+
 .story-intro .img-inline-paragragh {
   padding-top: 60px;
 }
@@ -992,6 +1044,14 @@ p {
 }
 .story-intro .content p:last-child {
   margin-bottom: 0;
+}
+
+.my-work-container {
+  padding-bottom: 50px;
+}
+
+.img-cont {
+  margin-top: 10px;
 }
 
 /*--------------------------------------------------------------
@@ -1104,7 +1164,20 @@ p {
 }
 
 .contact-details li {
-  padding-bottom: 10px;
+  padding-bottom: 20px;
+  font-size: 20px;
+  /* font-weight: 400; */
+}
+
+.contact-details a:hover{
+  text-decoration:underline;
+  color: #b8a07e;
+}
+
+.contact-details a{
+  text-decoration:underline;
+  color:#5a656ebb;
+  font-weight: 400;
 }
 
 #contact input, #contact textarea {
@@ -1193,11 +1266,16 @@ p {
 .main-content {
   /* background: #f7f7f7; */
   background: #fff;
+  border-top: 3px solid #b8a07e;
 }
 
 .main-content .container-main {
   display: inline-block;
   width: 100%;
+}
+
+.main-content .container-main a{
+  color:#b8a07e;
 }
 
 .main-content .container-main .block-main {
@@ -1746,6 +1824,11 @@ blockquote {
   #portfolio .portfolio-list .nav li {
     float: none;
     margin: 20px;
+  }
+
+  #portfolio-cont {
+    max-height: 25rem;
+    overflow-y: scroll;
   }
 
   /* journal */
